--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,18 @@ p {
     line-height: 1.4em;
     color: #333;
 }
+table{
+      border-collapse: collapse;
+      width:100%;
+}
+td{
+      text-align: left;
+      padding: 15px;
+}
+tr:hover {background-color: #f5f5f5;}
+table, tr, th {
+      border: 1px solid black;
+}
 footer {
         border-top: 1px solid #d5d5d5;
         font-size: .8em;
