--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ th, td{
       padding: 15px;
 }
 tr:hover {background-color: #f5f5f5;}
-table, tr, th {
+table, tr{
       border: 1px solid black;
 }
 footer {
