--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,10 @@ a:link{
     text-decoration: none;
     color: #999;
 }
+a:hover{
+      text-decoration: none;
+      background-color: grey;
+}
 <!-- fonts -->
 h1 {
     font-size: 3em;
