--- a/css/main.css
+++ b/css/main.css
@@ -52,11 +52,15 @@ nav ul li{
 }
 a:link{
     text-decoration: none;
-    color: #999;
+    color: #333;
 }
 a:hover{
       text-decoration: none;
-      background-color: grey;
+      background-color: #999;
+}
+a:visited{
+      text-decoration:none;
+      color: #333;
 }
 <!-- fonts -->
 h1 {
