--- a/css/main.css
+++ b/css/main.css
@@ -9,8 +9,11 @@ body{
 }
 div.header{
       width: 25%;
-      float: left;
       padding: 15px;
+      float: left;
+}
+div.menu{
+    width: 75%;
 }
 div.slogan{
       padding: 15px;
@@ -42,14 +45,18 @@ table, tr{
 }
 <!-- Links-->
 nav ul{
-      font-family: "Times New Roman", Georgia, Serif;
-      padding: 0px;
-      list-style: none;
-      font-weight: bold;
+      margin: 0;
+      padding: 0;
+      list-style-type: none;
 }
 nav ul li{
+      padding: 8px;
+      margin-bottom: 8px;
       display: inline;
       margin-right: 20px;
+      color = #444;
+      font-weight: bold;
+      font-family: "Times New Roman", Georgia, Serif;
 }
 a:link{
     text-decoration: none;
