--- a/css/main.css
+++ b/css/main.css
@@ -7,17 +7,19 @@ body{
       margin: 60px auto;
       width: 65%;
 }
+
 div.header{
       width: 25%;
       padding: 15px;
       float: left;
-    color: #cf0000;
 }
 div.menu{
     width: 75%;
+    padding 15px;
+    float: left;
 }
 div.slogan{
-      padding: 15px;
+      padding: 5px;
       background-color: #444;
       text-align: center;
 }
