--- a/css/main.css
+++ b/css/main.css
@@ -7,11 +7,16 @@ body{
       margin: 60px auto;
       width: 65%;
 }
-
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
 div.header{
       width: 25%;
       padding: 15px;
       float: left;
+      color: #cf0000;
 }
 div.menu{
     width: 75%;
