--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,9 @@ div.header{
       width: 25%;
       padding: 15px;
       float: left;
+      color: #cf0000;
+      font-size: 1em;
+      font-family: "Times New Roman", Times, Serif;       
 }
 div.menu{
     width: 70%;
