--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ body{
 }
 div.header{
       width: 25%;
-      padding: 15px;
+      padding: 5px;
       float: left;
       color: #cf0000;
       font-size: 1em;
@@ -23,7 +23,7 @@ div.header{
 }
 div.menu{
     width: 70%;
-    padding 15px;
+    padding 5px;
     float: left;
 }
 div.slogan{
@@ -33,6 +33,8 @@ div.slogan{
 }
 div.background{
       padding: 15px;
+      text-align: center;
+      background-color: #cfaaaa;
       list-style: none;     
 }
 div.fields{
@@ -92,7 +94,7 @@ h1 {
     color: #cf0000;
 }
 h2 {
-    font-size: 1em;
+    font-size: 2em;
     font-family: "Times New Roman", Times, Serif;
     color: #fff
 }
