--- a/css/main.css
+++ b/css/main.css
@@ -40,8 +40,9 @@ div.background{
 div.fields{
       padding: 15px;
       list-style: none;
+      text-align: center;
       font-weight: bold;
-      background-color: #444;
+      background-color: #aaa;
 }
 <!-- Table -->
 table{
@@ -85,6 +86,7 @@ a.fields:link{
 }
 a.fields:hover{
     text-decoration: none;
+    font-size: 2em;
     color: #fff;
 }
 a.fields:visited{
