--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,6 @@ div.slogan{
 div.background{
       padding: 15px;
       text-align: center;
-      background-color: #cfaaaa;
       list-style: none;     
 }
 div.fields{
@@ -82,6 +81,7 @@ a:visited{
 }
 a.fields:link{
       text-decoration: none;
+      font-size: 2em;
       color: #cf0000;
 }
 a.fields:hover{
@@ -91,6 +91,7 @@ a.fields:hover{
 }
 a.fields:visited{
       text-decoration: none;
+      font-size: 2em;
       color: #cf0000;
 }
 <!-- fonts -->
