--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,10 @@ a:link{
     text-decoration: none;
     color: #333;
 }
+a:hover{
+    text-decoration:none;
+    color: #cf0000;
+}
 a:visited{
       text-decoration:none;
       color: #333;
@@ -77,6 +81,11 @@ a.bkgrd:link{
       text-decoration: none;
       font-size: 2em;
       color: #333;
+}
+a.bkrgd:hover{
+    text-decoration:none;
+    color: #cf0000;
+    font-size: 2em;
 }
 
 <!-- fonts -->
