--- a/css/main.css
+++ b/css/main.css
@@ -51,31 +51,41 @@ table, tr{
       border: 1px solid black;
 }
 <!-- Links-->
-div.menu nav ul{
+nav ul{
       margin: 0;
       padding: 0;
       list-style-type: none;
 }
-div.menu nav ul li{
+nav ul li{
       padding: 8px;
       margin-bottom: 8px;
       display: inline;
       margin-right: 20px;
-      color = #333;
-      text-decoration:none;
+      color = #444;
       font-weight: bold;
       font-family: "Times New Roman", Georgia, Serif;
 }
-nav ul li:hover{
+a:link{
+    text-decoration: none;
+    color: #333;
+}
+a:hover{
+    text-decoration:none;
     color: #cf0000;
 }
-div.background nav ul li{
+a:visited{
+      text-decoration:none;
+      color: #333;
+}
+a.bkgrd:link{
       text-decoration: none;
       font-size: 2em;
-      color: #333
+      color: #333;
 }
-div.background nav ul li{
+a.bkrgd:hover{
+    text-decoration:none;
     color: #cf0000;
+    font-size: 2em;
 }
 
 <!-- fonts -->
