--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@ div.menu{
     width: 70%;
     padding 15px;
     float: left;
+    background-color: #33b5e5;
 }
 div.slogan{
       padding: 5px;
