--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ body{
 }
 div.header{
       width: 25%;
+      background-color: #33b5e5;
       padding: 5px;
       float: left;
       color: #cf0000;
