--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,8 @@ div.header{
 }
 div.menu{
     width: 70%;
-    padding 15px;
+    padding: 15px;
+    margin-top:5px; 
     float: left;
     background-color: #33b5e5;
 }
