--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ div.menu{
     width: 70%;
     padding: 15px;
     margin-top:4px; 
-    float: left;
+    float: right;
 }
 div.slogan{
       padding: 5px;
